Add profile image to resume

--- a/resume.html
+++ b/resume.html
@@ -9,12 +9,19 @@
 <body>
   <div class="container">
     <header>
-      <h1>SAHIL BATRA</h1>
-      <p class="headline">Autodidact learner with a passion of building Machine Learning Systems & Teaching</p>
-      <div class="contact-info">
+      <div class="header-content">
+        <div class="profile-image">
+          <img src="image.png" alt="Sahil Batra">
+        </div>
+        <div class="header-text">
+          <h1>SAHIL BATRA</h1>
+          <p class="headline">Autodidact learner with a passion of building Machine Learning Systems & Teaching</p>
+          <div class="contact-info">
         <span>Email: <a href="mailto:shlbatra123@gmail.com">shlbatra123@gmail.com</a></span>
         <span>Location: Canada</span>
         <span>Portfolio: <a href="https://shlbatra.github.io/ml-portfolio" target="_blank">https://shlbatra.github.io/ml-portfolio</a></span>
+      </div>
+        </div>
       </div>
     </header>
 
