Update experience and education sections with timeline design

--- a/resume.html
+++ b/resume.html
@@ -81,119 +81,171 @@
 
     <section class="work-experience">
       <h2>EXPERIENCE</h2>
-      <div class="job">
-        <div class="job-header">
-          <span class="position">Sr. ML Engineer</span>
-          <span class="company">@ Shopify</span>
-          <span class="location">Remote, Canada</span>
-          <span class="timeframe">Jul 2022 - Present</span>
+      <div class="timeline">
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-date">2022 - Present</div>
+          <div class="timeline-content">
+            <div class="job-logo shopify-logo"></div>
+            <div class="job-header">
+              <span class="position">Sr. ML Engineer</span>
+              <span class="company">@ Shopify</span>
+              <span class="location">Remote, Canada</span>
+            </div>
+            <ul>
+              <li>Led ML Ops productionalization for fraud detection models, enhancing model evaluation, tracking, and real-time deployment. 100+ manual hours saved, allowed fast iteration of models within hours.</li>
+              <li>Contributed to model development for fraud onboarding use cases—including point-of-payment, card cashing, and no-intent-to-ship fraud—covering feature engineering, model training, and real-time inference. Prec 90%; Savings of $5M+.</li>
+              <li>Helped build transformer-decoder networks using Sequence data to identify fraud at different points of merchant journey. Led to identification of Bot related incidents.</li>
+            </ul>
+          </div>
         </div>
-        <ul>
-          <li>Led ML Ops productionalization for fraud detection models, enhancing model evaluation, tracking, and real-time deployment. 100+ manual hours saved, allowed fast iteration of models within hours.</li>
-          <li>Contributed to model development for fraud onboarding use cases—including point-of-payment, card cashing, and no-intent-to-ship fraud—covering feature engineering, model training, and real-time inference. Prec 90%; Savings of $5M+.</li>
-          <li>Helped build transformer-decoder networks using Sequence data to identify fraud at different points of merchant journey. Led to identification of Bot related incidents.</li>
-        </ul>
-      </div>
 
-      <div class="job">
-        <div class="job-header">
-          <span class="position">Sr. Data Scientist</span>
-          <span class="company">@ Dell</span>
-          <span class="location">Remote, Canada</span>
-          <span class="timeframe">Mar 2018 - Jul 2022</span>
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-date">2018 - 2022</div>
+          <div class="timeline-content">
+            <div class="job-logo dell-logo"></div>
+            <div class="job-header">
+              <span class="position">Sr. Data Scientist</span>
+              <span class="company">@ Dell</span>
+              <span class="location">Remote, Canada</span>
+            </div>
+            <ul>
+              <li>Manage the AI platform & strategy, stakeholder engagement and technical work across 4 data scientists & data engineers.</li>
+              <li>Built AI systems & Data Pipelines</li>
+              <li>Created infection risk KPI and provided time to return based on LSTM model. The model was shared across the Security Executive Council and 500 companies across the globe.</li>
+              <li>Classical imbalanced fraud risk scoring model to detect fraudulent emails with model metrics on live data - Prec 90%, $5M + saved, end to end system to support Fraud ops.</li>
+              <li>Identified characteristics of employees susceptible to phishing based on phishing simulations data (Prec 83% & Rec 89%).</li>
+              <li>Applied an AutoEncoder to reconstruct daily network data to identify anomalous traffic using Producer Consumer Ratio, Session & Volume of traffic across network enabling reduction in false positive rate by 60%.</li>
+            </ul>
+          </div>
         </div>
-        <ul>
-          <li>Manage the AI platform & strategy, stakeholder engagement and technical work across 4 data scientists & data engineers.</li>
-          <li>Built AI systems & Data Pipelines</li>
-          <li>Created infection risk KPI and provided time to return based on LSTM model. The model was shared across the Security Executive Council and 500 companies across the globe.</li>
-          <li>Classical imbalanced fraud risk scoring model to detect fraudulent emails with model metrics on live data - Prec 90%, $5M + saved, end to end system to support Fraud ops.</li>
-          <li>Identified characteristics of employees susceptible to phishing based on phishing simulations data (Prec 83% & Rec 89%).</li>
-          <li>Applied an AutoEncoder to reconstruct daily network data to identify anomalous traffic using Producer Consumer Ratio, Session & Volume of traffic across network enabling reduction in false positive rate by 60%.</li>
-        </ul>
-      </div>
 
-      <div class="job">
-        <div class="job-header">
-          <span class="position">Mentor</span>
-          <span class="company">@ Great Learning</span>
-          <span class="location">Canada</span>
-          <span class="timeframe">Aug 2020 - Feb 2022</span>
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-date">2020 - 2022</div>
+          <div class="timeline-content">
+            <div class="job-logo gl-logo"></div>
+            <div class="job-header">
+              <span class="position">Mentor</span>
+              <span class="company">@ Great Learning</span>
+              <span class="location">Canada</span>
+            </div>
+            <ul>
+              <li>Teaching & providing industry perspective for MIT & UT Austin - Artificial Intelligence & Machine Learning courses with overall rating of 4.8/5.</li>
+            </ul>
+          </div>
         </div>
-        <ul>
-          <li>Teaching & providing industry perspective for MIT & UT Austin - Artificial Intelligence & Machine Learning courses with overall rating of 4.8/5.</li>
-        </ul>
-      </div>
 
-      <div class="job">
-        <div class="job-header">
-          <span class="position">Data Scientist, BI & Analytics Lead</span>
-          <span class="company">@ Dell</span>
-          <span class="location">USA / Canada</span>
-          <span class="timeframe">June 2016 - Feb 2018</span>
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-date">2016 - 2018</div>
+          <div class="timeline-content">
+            <div class="job-logo dell-logo"></div>
+            <div class="job-header">
+              <span class="position">Data Scientist, BI & Analytics Lead</span>
+              <span class="company">@ Dell</span>
+              <span class="location">USA / Canada</span>
+            </div>
+            <ul>
+              <li>Built Metrics & KPI from ground up for Servers Business Unit on weekly operational performance (100+ attendees).</li>
+              <li>Applied ML models in sales domain:</li>
+              <li>Customer market segmentation using K Prototype based on company attributes, and recency, frequency & monetary attributes for sales targeting, resulting in a 28% increase in qualified leads.</li>
+              <li>Commodity data clustering to identify trends of most common vs least configurations, reducing sample inventory holding costs by 20%.</li>
+            </ul>
+          </div>
         </div>
-        <ul>
-          <li>Built Metrics & KPI from ground up for Servers Business Unit on weekly operational performance (100+ attendees).</li>
-          <li>Applied ML models in sales domain:</li>
-          <li>Customer market segmentation using K Prototype based on company attributes, and recency, frequency & monetary attributes for sales targeting, resulting in a 28% increase in qualified leads.</li>
-          <li>Commodity data clustering to identify trends of most common vs least configurations, reducing sample inventory holding costs by 20%.</li>
-        </ul>
-      </div>
 
-      <div class="job">
-        <div class="job-header">
-          <span class="position">Data Scientist, Analytics</span>
-          <span class="company">@ Dell</span>
-          <span class="location">USA</span>
-          <span class="timeframe">July 2015 - May 2016</span>
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-date">2015 - 2016</div>
+          <div class="timeline-content">
+            <div class="job-logo dell-logo"></div>
+            <div class="job-header">
+              <span class="position">Data Scientist, Analytics</span>
+              <span class="company">@ Dell</span>
+              <span class="location">USA</span>
+            </div>
+            <ul>
+              <li>Created ML models:</li>
+              <li>Clustering using KNN & Quantile Regression to identify customer software spend across different market segments, revealing 2 high-potential market segments for targeting.</li>
+              <li>Lead generation cross-sell model to help sales to identify better candidates for cold calling, improving cross-sell conversion rate from 9% to 37%.</li>
+            </ul>
+          </div>
         </div>
-        <ul>
-          <li>Created ML models:</li>
-          <li>Clustering using KNN & Quantile Regression to identify customer software spend across different market segments, revealing 2 high-potential market segments for targeting.</li>
-          <li>Lead generation cross-sell model to help sales to identify better candidates for cold calling, improving cross-sell conversion rate from 9% to 37%.</li>
-        </ul>
-      </div>
 
-      <div class="job">
-        <div class="job-header">
-          <span class="position">Software Developer, Business Analytics</span>
-          <span class="company">@ AON Hewitt</span>
-          <span class="location">India</span>
-          <span class="timeframe">Nov 2013 - May 2014</span>
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-date">2013 - 2014</div>
+          <div class="timeline-content">
+            <div class="job-logo aon-logo"></div>
+            <div class="job-header">
+              <span class="position">Software Developer, Business Analytics</span>
+              <span class="company">@ AON Hewitt</span>
+              <span class="location">India</span>
+            </div>
+            <ul>
+              <li>Utilized informatica to build data pipelines & hadoop for data storage for ingestion of employee workday data.</li>
+            </ul>
+          </div>
         </div>
-        <ul>
-          <li>Utilized informatica to build data pipelines & hadoop for data storage for ingestion of employee workday data.</li>
-        </ul>
-      </div>
 
-      <div class="job">
-        <div class="job-header">
-          <span class="position">Software Engineer, BI</span>
-          <span class="company">@ Computer Sciences Corporation</span>
-          <span class="location">Noida, India / United Kingdom</span>
-          <span class="timeframe">Aug 2010 - June 2013</span>
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-date">2010 - 2013</div>
+          <div class="timeline-content">
+            <div class="job-logo csc-logo"></div>
+            <div class="job-header">
+              <span class="position">Software Engineer, BI</span>
+              <span class="company">@ Computer Sciences Corporation</span>
+              <span class="location">Noida, India / United Kingdom</span>
+            </div>
+            <ul>
+              <li>Built ETL Data pipelines using SAS & Informatica to pull data feeds to create data warehouse & data marts in SQL & IBM DB2 using Fact/Dims.</li>
+            </ul>
+          </div>
         </div>
-        <ul>
-          <li>Built ETL Data pipelines using SAS & Informatica to pull data feeds to create data warehouse & data marts in SQL & IBM DB2 using Fact/Dims.</li>
-        </ul>
       </div>
     </section>
 
     <section class="education">
       <h2>EDUCATION</h2>
-      <div class="edu-entry">
-        <span class="degree">Machine Learning Engineer</span>
-        <span class="university">FourthBrain.AI</span>
-        <span class="edu-dates">Sep 2021</span>
-      </div>
-      <div class="edu-entry">
-        <span class="degree">MS in Business Analytics</span>
-        <span class="university">The University of Texas at Austin</span>
-        <span class="edu-dates">May 2015</span>
-      </div>
-      <div class="edu-entry">
-        <span class="degree">Bachelor of Technology, Electronics & Communication</span>
-        <span class="university">GGS Indraprastha University</span>
-        <span class="edu-dates">June 2010</span>
+      <div class="timeline">
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-date">2021</div>
+          <div class="timeline-content">
+            <div class="edu-logo fourthbrain-logo"></div>
+            <div class="edu-header">
+              <span class="degree">Machine Learning Engineer</span>
+              <span class="university">FourthBrain.AI</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-date">2015</div>
+          <div class="timeline-content">
+            <div class="edu-logo ut-logo"></div>
+            <div class="edu-header">
+              <span class="degree">MS in Business Analytics</span>
+              <span class="university">The University of Texas at Austin</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-date">2010</div>
+          <div class="timeline-content">
+            <div class="edu-logo ggs-logo"></div>
+            <div class="edu-header">
+              <span class="degree">Bachelor of Technology, Electronics & Communication</span>
+              <span class="university">GGS Indraprastha University</span>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </div>
