Move Work Authorization to separate section below Education

--- a/resume.html
+++ b/resume.html
@@ -72,10 +72,6 @@
           <span class="skill-title">Certifications:</span>
           <span class="skill-items">Data Engineering Nanodegree (Udacity), Deep Learning Specialization (Coursera), Natural Language Processing Specialization (Coursera), Splunk Fundamentals & Advanced Searching (Splunk), GIAC Security Essentials (GSEC)</span>
         </div>
-        <div class="skill-category">
-          <span class="skill-title">Work Authorization:</span>
-          <span class="skill-items">Canadian and Indian citizen, US H1B Visa and Australia/NZ Working Holiday Visa.</span>
-        </div>
       </div>
     </section>
 
@@ -227,6 +223,11 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <section class="work-authorization">
+      <h2>WORK AUTHORIZATION</h2>
+      <p>Canadian and Indian citizen, US H1B Visa and Australia/NZ Working Holiday Visa.</p>
     </section>
   </div>
 </body>
