--- a/resume.html
+++ b/resume.html
@@ -17,8 +17,11 @@
           <h1>SAHIL BATRA</h1>
           <p class="headline">Autodidact learner with a passion of building Machine Learning Systems & Teaching</p>
           <div class="contact-info">
-        <span>Email: <a href="mailto:shlbatra123@gmail.com">shlbatra123@gmail.com</a></span>
-      </div>
+            <div class="email-container">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" alt="Gmail" class="gmail-logo" id="gmail-logo">
+              <span class="email-text" id="email-text"><a href="mailto:shlbatra123@gmail.com">shlbatra123@gmail.com</a></span>
+            </div>
+          </div>
         </div>
       </div>
     </header>
@@ -229,5 +232,15 @@
       <p>Canadian and Indian citizen, US H1B Visa and Australia/NZ Working Holiday Visa.</p>
     </section>
   </div>
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      const gmailLogo = document.getElementById('gmail-logo');
+      const emailText = document.getElementById('email-text');
+      
+      gmailLogo.addEventListener('click', function() {
+        emailText.classList.toggle('show');
+      });
+    });
+  </script>
 </body>
 </html>
