--- a/resume.html
+++ b/resume.html
@@ -17,9 +17,16 @@
           <h1>SAHIL BATRA</h1>
           <p class="headline">Autodidact learner with a passion of building Machine Learning Systems & Teaching</p>
           <div class="contact-info">
-            <div class="email-container">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" alt="Gmail" class="gmail-logo" id="gmail-logo">
-              <span class="email-text" id="email-text"><a href="mailto:shlbatra123@gmail.com">shlbatra123@gmail.com</a></span>
+            <div class="social-icons">
+              <div class="icon-container">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" alt="Gmail" class="social-logo gmail-logo" id="gmail-logo">
+                <span class="email-text" id="email-text"><a href="mailto:shlbatra123@gmail.com">shlbatra123@gmail.com</a></span>
+              </div>
+              <div class="icon-container">
+                <a href="https://www.linkedin.com/in/shlbatra/" target="_blank">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" class="social-logo linkedin-logo">
+                </a>
+              </div>
             </div>
           </div>
         </div>
