Add GitHub logo and link to profile

--- a/resume.html
+++ b/resume.html
@@ -27,6 +27,11 @@
                   <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" class="social-logo linkedin-logo">
                 </a>
               </div>
+              <div class="icon-container">
+                <a href="https://github.com/shlbatra" target="_blank">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub" class="social-logo github-logo">
+                </a>
+              </div>
             </div>
           </div>
         </div>
