--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,7 @@
     <section class="projects">
       <h2>PROJECTS</h2>
       <div class="project">
-        <div class="project-desc">Built an open source wake word detector using Mozilla Common Voice Dataset & Google Speech to Text (85% + acc).</div>
+        <div class="project-desc">Built an open source <a href="https://github.com/shlbatra/TriggerWakeWordDetection" target="_blank">wake word detector</a> using Mozilla Common Voice Dataset & Google Speech to Text (85% + acc).</div>
       </div>
       <div class="project">
         <div class="project-desc">Built an end to end Kube Flow pipeline for ML model deployment & inference.</div>
