--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
         <div class="project-desc">Built an open source <a href="https://github.com/shlbatra/TriggerWakeWordDetection" target="_blank">wake word detector</a> using Mozilla Common Voice Dataset & Google Speech to Text (85% + acc).</div>
       </div>
       <div class="project">
-        <div class="project-desc">Built an end to end Kube Flow pipeline for ML model deployment & inference.</div>
+        <div class="project-desc">Built an end to end <a href="https://github.com/shlbatra/ml_pipelines_kfp" target="_blank">Kube Flow pipeline</a> for ML model deployment & inference.</div>
       </div>
       <div class="project">
         <div class="project-desc">Built GPT2 based transformer decoder model for next word prediction.</div>
