Link 'transformer decoder model' to AWS Sagemaker GitHub repository

--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@
         <div class="project-desc">Built an end to end <a href="https://github.com/shlbatra/ml_pipelines_kfp" target="_blank">Kube Flow pipeline</a> for ML model deployment & inference.</div>
       </div>
       <div class="project">
-        <div class="project-desc">Built GPT2 based transformer decoder model for next word prediction.</div>
+        <div class="project-desc">Built GPT2 based <a href="https://github.com/shlbatra/AWS_Sagemaker_Projects" target="_blank">transformer decoder model</a> for next word prediction.</div>
       </div>
     </section>
 
