Add LSTM-based Sentiment Analysis project

--- a/resume.html
+++ b/resume.html
@@ -49,6 +49,9 @@
       <div class="project">
         <div class="project-desc">Built GPT2 based <a href="https://github.com/shlbatra/AWS_Sagemaker_Projects" target="_blank">transformer decoder model</a> for next word prediction.</div>
       </div>
+      <div class="project">
+        <div class="project-desc">Built LSTM based <a href="https://github.com/shlbatra/AWS_Sagemaker_Projects" target="_blank">Sentiment Analysis model</a> deployed on AWS Sagemaker.</div>
+      </div>
     </section>
 
     <section class="skills">
