--- a/resume.html
+++ b/resume.html
@@ -41,16 +41,16 @@
     <section class="projects">
       <h2>PROJECTS</h2>
       <div class="project">
-        <div class="project-desc">Built an open source <a href="https://github.com/shlbatra/TriggerWakeWordDetection" target="_blank">wake word detector</a> using Mozilla Common Voice Dataset & Google Speech to Text (85% + acc).</div>
+        <div class="project-desc"><span class="project-bullet">•</span> Built an open source <a href="https://github.com/shlbatra/TriggerWakeWordDetection" target="_blank">wake word detector</a> using Mozilla Common Voice Dataset & Google Speech to Text (85% + acc).</div>
       </div>
       <div class="project">
-        <div class="project-desc">Built an end to end <a href="https://github.com/shlbatra/ml_pipelines_kfp" target="_blank">Kube Flow pipeline</a> for ML model deployment & inference.</div>
+        <div class="project-desc"><span class="project-bullet">•</span> Built an end to end <a href="https://github.com/shlbatra/ml_pipelines_kfp" target="_blank">Kube Flow pipeline</a> for ML model deployment & inference.</div>
       </div>
       <div class="project">
-        <div class="project-desc">Built GPT2 based <a href="https://github.com/shlbatra/AWS_Sagemaker_Projects" target="_blank">transformer decoder model</a> for next word prediction.</div>
+        <div class="project-desc"><span class="project-bullet">•</span> Built GPT2 based <a href="https://github.com/shlbatra/AWS_Sagemaker_Projects" target="_blank">transformer decoder model</a> for next word prediction.</div>
       </div>
       <div class="project">
-        <div class="project-desc">Built LSTM based <a href="https://github.com/shlbatra/AWS_Sagemaker_Projects" target="_blank">Sentiment Analysis model</a> deployed on AWS Sagemaker.</div>
+        <div class="project-desc"><span class="project-bullet">•</span> Built LSTM based <a href="https://github.com/shlbatra/AWS_Sagemaker_Projects" target="_blank">Sentiment Analysis model</a> deployed on AWS Sagemaker.</div>
       </div>
     </section>
 
