Add indentation to sub-points in work experience

--- a/resume.html
+++ b/resume.html
@@ -122,10 +122,10 @@
             <ul>
               <li>Manage the AI platform & strategy, stakeholder engagement and technical work across 4 data scientists & data engineers.</li>
               <li>Built AI systems & Data Pipelines</li>
-              <li>Created infection risk KPI and provided time to return based on LSTM model. The model was shared across the Security Executive Council and 500 companies across the globe.</li>
-              <li>Classical imbalanced fraud risk scoring model to detect fraudulent emails with model metrics on live data - Prec 90%, $5M + saved, end to end system to support Fraud ops.</li>
-              <li>Identified characteristics of employees susceptible to phishing based on phishing simulations data (Prec 83% & Rec 89%).</li>
-              <li>Applied an AutoEncoder to reconstruct daily network data to identify anomalous traffic using Producer Consumer Ratio, Session & Volume of traffic across network enabling reduction in false positive rate by 60%.</li>
+              <li class="indented">Created infection risk KPI and provided time to return based on LSTM model. The model was shared across the Security Executive Council and 500 companies across the globe.</li>
+              <li class="indented">Classical imbalanced fraud risk scoring model to detect fraudulent emails with model metrics on live data - Prec 90%, $5M + saved, end to end system to support Fraud ops.</li>
+              <li class="indented">Identified characteristics of employees susceptible to phishing based on phishing simulations data (Prec 83% & Rec 89%).</li>
+              <li class="indented">Applied an AutoEncoder to reconstruct daily network data to identify anomalous traffic using Producer Consumer Ratio, Session & Volume of traffic across network enabling reduction in false positive rate by 60%.</li>
             </ul>
           </div>
         </div>
@@ -155,8 +155,8 @@
             <ul>
               <li>Built Metrics & KPI from ground up for Servers Business Unit on weekly operational performance (100+ attendees).</li>
               <li>Applied ML models in sales domain:</li>
-              <li>Customer market segmentation using K Prototype based on company attributes, and recency, frequency & monetary attributes for sales targeting, resulting in a 28% increase in qualified leads.</li>
-              <li>Commodity data clustering to identify trends of most common vs least configurations, reducing sample inventory holding costs by 20%.</li>
+              <li class="indented">Customer market segmentation using K Prototype based on company attributes, and recency, frequency & monetary attributes for sales targeting, resulting in a 28% increase in qualified leads.</li>
+              <li class="indented">Commodity data clustering to identify trends of most common vs least configurations, reducing sample inventory holding costs by 20%.</li>
             </ul>
           </div>
         </div>
@@ -171,8 +171,8 @@
             </div>
             <ul>
               <li>Created ML models:</li>
-              <li>Clustering using KNN & Quantile Regression to identify customer software spend across different market segments, revealing 2 high-potential market segments for targeting.</li>
-              <li>Lead generation cross-sell model to help sales to identify better candidates for cold calling, improving cross-sell conversion rate from 9% to 37%.</li>
+              <li class="indented">Clustering using KNN & Quantile Regression to identify customer software spend across different market segments, revealing 2 high-potential market segments for targeting.</li>
+              <li class="indented">Lead generation cross-sell model to help sales to identify better candidates for cold calling, improving cross-sell conversion rate from 9% to 37%.</li>
             </ul>
           </div>
         </div>
