Add Shopify and Dell logos to work experience timeline

--- a/resume.html
+++ b/resume.html
@@ -97,6 +97,7 @@
       <div class="timeline">
         <div class="timeline-item">
           <div class="timeline-date">2022 - Present</div>
+          <div class="company-logo shopify-logo"></div>
           <div class="timeline-content">
             <div class="job-header">
               <span class="position">Sr. ML Engineer</span>
@@ -113,6 +114,7 @@
 
         <div class="timeline-item">
           <div class="timeline-date">2018 - 2022</div>
+          <div class="company-logo dell-logo"></div>
           <div class="timeline-content">
             <div class="job-header">
               <span class="position">Sr. Data Scientist</span>
@@ -146,6 +148,7 @@
 
         <div class="timeline-item">
           <div class="timeline-date">2016 - 2018</div>
+          <div class="company-logo dell-logo"></div>
           <div class="timeline-content">
             <div class="job-header">
               <span class="position">Data Scientist, BI & Analytics Lead</span>
@@ -163,6 +166,7 @@
 
         <div class="timeline-item">
           <div class="timeline-date">2015 - 2016</div>
+          <div class="company-logo dell-logo"></div>
           <div class="timeline-content">
             <div class="job-header">
               <span class="position">Data Scientist, Analytics</span>
