Replace '@ Shopify' text with Shopify logo image

--- a/resume.html
+++ b/resume.html
@@ -100,7 +100,7 @@
           <div class="timeline-content">
             <div class="job-header">
               <span class="position">Sr. ML Engineer</span>
-              <span class="company">@ Shopify</span>
+              <img src="shopify-logo.png" alt="Shopify" class="company-inline-logo">
               <span class="location">Remote, Canada</span>
             </div>
             <ul>
