Update company logos and styling in resume

--- a/resume.html
+++ b/resume.html
@@ -116,7 +116,7 @@
           <div class="timeline-content">
             <div class="job-header">
               <span class="position">Sr. Data Scientist</span>
-              <span class="company">@ Dell</span>
+              <img src="Dell-Logo.png" alt="Dell" class="company-inline-logo">
               <span class="location">Remote, Canada</span>
             </div>
             <ul>
@@ -135,7 +135,7 @@
           <div class="timeline-content">
             <div class="job-header">
               <span class="position">Mentor</span>
-              <span class="company">@ Great Learning</span>
+              <img src="great_learning_new_logo.png" alt="Great Learning" class="company-inline-logo">
               <span class="location">Canada</span>
             </div>
             <ul>
@@ -149,7 +149,7 @@
           <div class="timeline-content">
             <div class="job-header">
               <span class="position">Data Scientist, BI & Analytics Lead</span>
-              <span class="company">@ Dell</span>
+              <img src="Dell-Logo.png" alt="Dell" class="company-inline-logo">
               <span class="location">USA / Canada</span>
             </div>
             <ul>
@@ -166,7 +166,7 @@
           <div class="timeline-content">
             <div class="job-header">
               <span class="position">Data Scientist, Analytics</span>
-              <span class="company">@ Dell</span>
+              <img src="Dell-Logo.png" alt="Dell" class="company-inline-logo">
               <span class="location">USA</span>
             </div>
             <ul>
@@ -182,7 +182,7 @@
           <div class="timeline-content">
             <div class="job-header">
               <span class="position">Software Developer, Business Analytics</span>
-              <span class="company">@ AON Hewitt</span>
+              <img src="aonhewitt_logo.jpeg" alt="AON Hewitt" class="company-inline-logo">
               <span class="location">India</span>
             </div>
             <ul>
@@ -196,7 +196,7 @@
           <div class="timeline-content">
             <div class="job-header">
               <span class="position">Software Engineer, BI</span>
-              <span class="company">@ Computer Sciences Corporation</span>
+              <img src="dxc_logo.png" alt="DXC" class="company-inline-logo">
               <span class="location">Noida, India / United Kingdom</span>
             </div>
             <ul>
