Move image next to name, center headline and links

--- a/resume.html
+++ b/resume.html
@@ -15,8 +15,9 @@
         </div>
         <div class="header-text">
           <h1>SAHIL BATRA</h1>
-          <p class="headline">Autodidact learner with a passion of building Machine Learning Systems & Teaching</p>
-          <div class="contact-info">
+          <div class="headline-container">
+            <p class="headline">Autodidact learner with a passion of building Machine Learning Systems & Teaching</p>
+            <div class="contact-info">
             <div class="social-icons">
               <div class="icon-container">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" alt="Gmail" class="social-logo gmail-logo" id="gmail-logo">
@@ -33,6 +34,7 @@
                 </a>
               </div>
             </div>
+          </div>
           </div>
         </div>
       </div>
