Update image paths to artifacts folder

--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
     <header>
       <div class="header-content">
         <div class="profile-image">
-          <img src="image.png" alt="Sahil Batra">
+          <img src="artifacts/image.png" alt="Sahil Batra">
         </div>
         <div class="header-text">
           <h1>SAHIL BATRA</h1>
@@ -102,7 +102,7 @@
           <div class="timeline-content">
             <div class="job-header">
               <span class="position">Sr. ML Engineer</span>
-              <img src="shopify-logo.png" alt="Shopify" class="company-inline-logo">
+              <img src="artifacts/shopify-logo.png" alt="Shopify" class="company-inline-logo">
               <span class="location">Remote, Canada</span>
             </div>
             <ul>
@@ -118,7 +118,7 @@
           <div class="timeline-content">
             <div class="job-header">
               <span class="position">Sr. Data Scientist</span>
-              <img src="Dell-Logo.png" alt="Dell" class="company-inline-logo">
+              <img src="artifacts/Dell-Logo.png" alt="Dell" class="company-inline-logo">
               <span class="location">Remote, Canada</span>
             </div>
             <ul>
@@ -137,7 +137,7 @@
           <div class="timeline-content">
             <div class="job-header">
               <span class="position">Mentor</span>
-              <img src="great_learning_new_logo.png" alt="Great Learning" class="company-inline-logo">
+              <img src="artifacts/great_learning_new_logo.png" alt="Great Learning" class="company-inline-logo">
               <span class="location">Canada</span>
             </div>
             <ul>
@@ -151,7 +151,7 @@
           <div class="timeline-content">
             <div class="job-header">
               <span class="position">Data Scientist, BI & Analytics Lead</span>
-              <img src="Dell-Logo.png" alt="Dell" class="company-inline-logo">
+              <img src="artifacts/Dell-Logo.png" alt="Dell" class="company-inline-logo">
               <span class="location">USA / Canada</span>
             </div>
             <ul>
@@ -168,7 +168,7 @@
           <div class="timeline-content">
             <div class="job-header">
               <span class="position">Data Scientist, Analytics</span>
-              <img src="Dell-Logo.png" alt="Dell" class="company-inline-logo">
+              <img src="artifacts/Dell-Logo.png" alt="Dell" class="company-inline-logo">
               <span class="location">USA</span>
             </div>
             <ul>
@@ -184,7 +184,7 @@
           <div class="timeline-content">
             <div class="job-header">
               <span class="position">Software Developer, Business Analytics</span>
-              <img src="aonhewitt_logo.jpeg" alt="AON Hewitt" class="company-inline-logo">
+              <img src="artifacts/aonhewitt_logo.jpeg" alt="AON Hewitt" class="company-inline-logo">
               <span class="location">India</span>
             </div>
             <ul>
@@ -198,7 +198,7 @@
           <div class="timeline-content">
             <div class="job-header">
               <span class="position">Software Engineer, BI</span>
-              <img src="dxc_logo.png" alt="DXC" class="company-inline-logo">
+              <img src="artifacts/dxc_logo.png" alt="DXC" class="company-inline-logo">
               <span class="location">Noida, India / United Kingdom</span>
             </div>
             <ul>
