--- a/resume.html
+++ b/resume.html
@@ -106,8 +106,8 @@
               <span class="location">Remote, Canada</span>
             </div>
             <ul>
+              <li>Built end to end ML model for fraud onboarding use cases—including point-of-payment, card cashing, and no-intent-to-ship fraud—covering feature engineering, model training, real-time inference and adoption of fraud scores across products. Prec 90%; Savings of $5M+.</li>
               <li>Led ML Ops productionalization for fraud detection models, enhancing model evaluation, tracking, and real-time deployment. 100+ manual hours saved, allowed fast iteration of models within hours.</li>
-              <li>Contributed to model development for fraud onboarding use cases—including point-of-payment, card cashing, and no-intent-to-ship fraud—covering feature engineering, model training, and real-time inference. Prec 90%; Savings of $5M+.</li>
               <li>Helped build transformer-decoder networks using Sequence data to identify fraud at different points of merchant journey. Led to identification of Bot related incidents.</li>
             </ul>
           </div>
