add new encoder project

--- a/resume.html
+++ b/resume.html
@@ -54,6 +54,9 @@
       <div class="project">
         <div class="project-desc"><span class="project-bullet">•</span> Built LSTM based <a href="https://github.com/shlbatra/AWS_Sagemaker_Projects" target="_blank">Sentiment Analysis model</a> deployed on AWS Sagemaker.</div>
       </div>
+      <div class="project">
+        <div class="project-desc"><span class="project-bullet">•</span> Built <a href="https://github.com/shlbatra/BERT/blob/main/README.md" target="_blank">Transformer Encoder Model</a> with embeddings used for downstream Topic Classification problem.</div>
+      </div>
     </section>
 
     <section class="skills">
