--- a/resume.html
+++ b/resume.html
@@ -38,12 +38,9 @@
               </div>
               <div class="icon-container">
                 <button id="download-pdf" class="pdf-download-btn" title="Download Resume as PDF">
-                  <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                    <path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20Z" fill="#ffffff"/>
-                    <text x="12" y="17" text-anchor="middle" font-family="Arial, sans-serif" font-size="4" font-weight="bold" fill="#1a73e8">PDF</text>
-                    <circle cx="17" cy="17" r="4" fill="#dc3545"/>
-                    <path d="M15,15 L17,17 L19,15" stroke="white" stroke-width="1.2" fill="none" stroke-linecap="round"/>
-                    <path d="M17,13 L17,17" stroke="white" stroke-width="1.2" fill="none" stroke-linecap="round"/>
+                  <svg width="40" height="40" viewBox="0 0 24 24" fill="none">
+                    <path d="M12 3V16M12 16L16 12M12 16L8 12" stroke="#333" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M21 15V19C21 19.5304 20.7893 20.0391 20.4142 20.4142C20.0391 20.7893 19.5304 21 19 21H5C4.46957 21 3.96086 20.7893 3.58579 20.4142C3.21071 20.0391 3 19.5304 3 19V15" stroke="#333" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
                   </svg>
                 </button>
               </div>
