--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
               </div>
               <div class="icon-container">
                 <button id="download-pdf" class="pdf-download-btn" title="Download Resume as PDF">
-                  <svg width="40" height="40" viewBox="0 0 24 24" fill="none">
+                  <svg width="28" height="28" viewBox="0 0 24 24" fill="none">
                     <path d="M12 3V16M12 16L16 12M12 16L8 12" stroke="#333" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M21 15V19C21 19.5304 20.7893 20.0391 20.4142 20.4142C20.0391 20.7893 19.5304 21 19 21H5C4.46957 21 3.96086 20.7893 3.58579 20.4142C3.21071 20.0391 3 19.5304 3 19V15" stroke="#333" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
                   </svg>
@@ -83,7 +83,7 @@
         </div>
         <div class="skill-category">
           <span class="skill-title">ML Tools:</span>
-          <span class="skill-items">SageMaker, Vertex, Transformer, MCP, Langchain, TFX, Kubeflow</span>
+          <span class="skill-items">SageMaker, Vertex, Transformer, MCP, Langgraph, TFX, Kubeflow</span>
         </div>
         <div class="skill-category">
           <span class="skill-title">Programming Language:</span>
@@ -103,7 +103,7 @@
         </div>
         <div class="skill-category">
           <span class="skill-title">Certifications:</span>
-          <span class="skill-items">Data Engineering Nanodegree (Udacity), Deep Learning Specialization (Coursera), Natural Language Processing Specialization (Coursera), Splunk Fundamentals & Advanced Searching (Splunk), GIAC Security Essentials (GSEC)</span>
+          <span class="skill-items">Data Engineering Nanodegree (Udacity), Deep Learning & Natural Language Processing Specialization (Coursera), Splunk Fundamentals & Advanced Searching (Splunk), GIAC Security Essentials (GSEC)</span>
         </div>
       </div>
     </section>
@@ -213,7 +213,7 @@
             <div class="job-header">
               <span class="position">Software Engineer, BI</span>
               <img src="artifacts/dxc_logo.png" alt="DXC" class="company-inline-logo">
-              <span class="location">Noida, India / United Kingdom</span>
+              <span class="location">India / United Kingdom</span>
             </div>
             <ul>
               <li>Built ETL Data pipelines using SAS & Informatica to pull data feeds to create data warehouse & data marts in SQL & IBM DB2 using Fact/Dims.</li>
